tests/transpiler/x/scala/avg_builtin.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/avg_builtin.scala:4: error: not found: value avg
        println(avg(List(1, 2, 3)))
                ^
one error found
