tests/transpiler/x/scala/avg_builtin.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:50:57 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        println(avg(List(1, 2, 3)))
    }
}
